--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Omochi Discovery Feed – GAS Test</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <title>Omochi Discovery Feed</title>
 
   <style>
     html, body {
@@ -13,15 +13,25 @@
       color: #fff;
       overflow: hidden;
       font-family: system-ui, -apple-system, BlinkMacSystemFont;
+      touch-action: none;
+    }
+
+    .app {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .stage {
-      position: fixed;
-      inset: 0;
+      position: relative;
+      width: 100vw;
+      height: 100vh;
       max-width: calc(100vh * 9 / 16);
       max-height: calc(100vw * 16 / 9);
-      margin: auto;
       background: #000;
+      overflow: hidden;
     }
 
     iframe {
@@ -29,7 +39,14 @@
       height: 100%;
       border: 0;
       display: block;
-      background: #000;
+    }
+
+    .swipe-layer {
+      position: absolute;
+      inset: 0;
+      z-index: 2;
+      background: transparent;
+      touch-action: none;
     }
 
     .overlay {
@@ -37,8 +54,10 @@
       left: 0;
       right: 0;
       bottom: 0;
-      padding: 16px;
-      background: linear-gradient(to top, rgba(0,0,0,.8), transparent);
+      padding: 18px 16px calc(18px + env(safe-area-inset-bottom));
+      background: linear-gradient(to top, rgba(0,0,0,.85), rgba(0,0,0,0));
+      z-index: 3;
+      pointer-events: none;
     }
 
     .venue {
@@ -53,104 +72,186 @@
       margin: 0;
     }
 
-    .debug {
+    .actions {
+      position: absolute;
+      right: 12px;
+      bottom: 110px;
+      z-index: 4;
+    }
+
+    .btn {
+      border: 0;
+      padding: 12px 16px;
+      border-radius: 999px;
+      background: rgba(255,255,255,.18);
+      color: #fff;
+      font-weight: 700;
+      cursor: pointer;
+      backdrop-filter: blur(8px);
+    }
+
+    .modal-backdrop {
       position: fixed;
-      top: 6px;
-      left: 6px;
-      font-size: 11px;
-      opacity: .6;
+      inset: 0;
+      background: rgba(0,0,0,.6);
+      display: none;
+      align-items: flex-end;
+      justify-content: center;
+      padding: 16px;
+      z-index: 10;
+    }
+
+    .modal-backdrop[aria-hidden="false"] {
+      display: flex;
+    }
+
+    .modal {
+      background: #141416;
+      border-radius: 20px;
+      padding: 16px;
+      width: min(520px, 100%);
     }
   </style>
 </head>
 
 <body>
 
-<div class="stage">
-  <iframe id="yt"></iframe>
+<div class="app">
+  <div class="stage">
 
-  <div class="overlay">
-    <p class="venue" id="venueName">Loading…</p>
-    <p class="hook" id="hookText"></p>
+    <iframe
+      id="yt"
+      allow="autoplay; encrypted-media; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen>
+    </iframe>
+
+    <div class="swipe-layer" id="swipeLayer"></div>
+
+    <div class="actions">
+      <button class="btn" id="collectBtn">Collect</button>
+    </div>
+
+    <div class="overlay">
+      <p class="venue" id="venueName">Loading…</p>
+      <p class="hook" id="hookText"></p>
+    </div>
+
   </div>
 </div>
 
-<div class="debug" id="debug"></div>
+<div class="modal-backdrop" id="modalBackdrop" aria-hidden="true">
+  <div class="modal">
+    <p>To collect this place, please log in to Omochi.</p>
+    <button class="btn" id="closeModalBtn">Close</button>
+  </div>
+</div>
 
 <script>
-/* ===============================
+/* ==============================
    CONFIG
-================================ */
+============================== */
+const FEED_URL = "https://script.google.com/macros/s/AKfycbwGCFwE01RsFGlERTNtcSSm1I8AgJDNlIvBMZSdGAz_HhXRsyhLn-eTCEErXRmdUQLV/exec?action=feed";
 
-// 🔴 REPLACE WITH YOUR ACTUAL WEB APP URL
-const FEED_URL =
-  "https://script.google.com/macros/s/AKfycbwGCFwE01RsFGlERTNtcSSm1I8AgJDNlIvBMZSdGAz_HhXRsyhLn-eTCEErXRmdUQLV/exec?action=feed";
-
-/* ===============================
+/* ==============================
    STATE
-================================ */
-
+============================== */
 let FEED = [];
 let index = 0;
 
+/* ==============================
+   ELEMENTS
+============================== */
 const yt = document.getElementById("yt");
 const venueEl = document.getElementById("venueName");
 const hookEl = document.getElementById("hookText");
-const debugEl = document.getElementById("debug");
+const swipeLayer = document.getElementById("swipeLayer");
+const modal = document.getElementById("modalBackdrop");
 
-/* ===============================
-   VIDEO
-================================ */
-
+/* ==============================
+   HELPERS
+============================== */
 function embedSrc(id) {
   return `https://www.youtube.com/embed/${id}?playsinline=1&autoplay=1&mute=1&rel=0`;
 }
 
 function render() {
+  if (!FEED.length) return;
   const item = FEED[index];
-  if (!item) return;
-
-  yt.src = "about:blank";
-  setTimeout(() => {
-    yt.src = embedSrc(item.youtube_id);
-  }, 50);
-
+  yt.src = embedSrc(item.youtube_id);
   venueEl.textContent = item.venue_name;
   hookEl.textContent = item.hook_text;
-
-  debugEl.textContent = `Item ${index + 1} / ${FEED.length}`;
 }
 
-/* ===============================
-   FETCH
-================================ */
+function next() {
+  index = (index + 1) % FEED.length;
+  render();
+}
 
+function prev() {
+  index = (index - 1 + FEED.length) % FEED.length;
+  render();
+}
+
+/* ==============================
+   FETCH FROM APPS SCRIPT
+============================== */
 async function loadFeed() {
   try {
     const res = await fetch(FEED_URL);
     const json = await res.json();
 
-    console.log("FEED RESPONSE:", json);
-
-    FEED = json.items || [];
-
-    if (!FEED.length) {
-      venueEl.textContent = "No items";
+    if (!json.ok || !json.items?.length) {
+      venueEl.textContent = "No content available";
       return;
     }
 
+    FEED = json.items;
     render();
-
   } catch (err) {
-    venueEl.textContent = "Fetch error";
-    debugEl.textContent = err.message;
+    venueEl.textContent = "Failed to load feed";
     console.error(err);
   }
 }
 
-/* ===============================
-   INIT
-================================ */
+/* ==============================
+   SWIPE (UNCHANGED)
+============================== */
+let startY = 0;
+let startX = 0;
+let swiping = false;
+const THRESHOLD = 60;
 
+swipeLayer.addEventListener("touchstart", e => {
+  if (e.touches.length !== 1) return;
+  startY = e.touches[0].clientY;
+  startX = e.touches[0].clientX;
+  swiping = true;
+}, { passive: true });
+
+swipeLayer.addEventListener("touchend", e => {
+  if (!swiping) return;
+  const dy = e.changedTouches[0].clientY - startY;
+  const dx = e.changedTouches[0].clientX - startX;
+  swiping = false;
+
+  if (Math.abs(dy) > Math.abs(dx) && Math.abs(dy) > THRESHOLD) {
+    dy < 0 ? next() : prev();
+  }
+}, { passive: true });
+
+/* ==============================
+   MODAL
+============================== */
+document.getElementById("collectBtn").onclick = () =>
+  modal.setAttribute("aria-hidden", "false");
+
+document.getElementById("closeModalBtn").onclick = () =>
+  modal.setAttribute("aria-hidden", "true");
+
+/* ==============================
+   INIT
+============================== */
 loadFeed();
 </script>
 
